# EnergyDisaggregation

./: .gitignore  EDA.ipynb  EDA_NN.ipynb  EDA_STATS.ipynb  EDA_function_dev.ipynb  EDA_test_base_NN.ipynb  EDA_test_base_Stats.ipynb  EDA_test_preprocess.ipynb  README.md
EnergyDisaggregation/: pyproject.toml
EnergyDisaggregation/energydisaggregation/: __init__.py
EnergyDisaggregation/energydisaggregation/data/: dataloader.py
EnergyDisaggregation/energydisaggregation/data_storage/: linear_regression_model.sav
EnergyDisaggregation/energydisaggregation/dataloader/: config.py
EnergyDisaggregation/energydisaggregation/evaluation/: check_independence.py  check_temperature.py
EnergyDisaggregation/energydisaggregation/feature_engineering/: calendar.py  cyclical_transformation.py  historical.py  reshape_timeseries.py  selection.py  temperature.py  utils.py
EnergyDisaggregation/energydisaggregation/models/: Model_test_eva.ipynb  base.py  nn_model.py  stat_model.py  test_base.ipynb
EnergyDisaggregation/tests/: test_energydisaggregation.py
energydisaggregation/data_loader/: config.py  dataloader.py
energydisaggregation/feature_engineering/: calendar.py  temperature.py
