[tool.poetry]
name = "EnergyDisaggregation"
version = "0.1.0"
description = ""
authors = ["sschaack <sofiane.schaack@capgemini.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
ipykernel = "^6.20.1"
matplotlib = "^3.6.3"
plotly = "^5.11.0"
nbformat = "^5.7.3"
black = "^22.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
